# Scientific-Claim-Verifier

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
scientific-claim-verifier/: pyproject.toml  requirements.txt
scientific-claim-verifier/benchmark_results/: confidence_analysis.json
scientific-claim-verifier/data/kb_all/: chunks_id_mapping.pkl  papers.db  propositions_id_mapping.pkl
scientific-claim-verifier/data/kb_all/chunks/: index.faiss  index.pkl
scientific-claim-verifier/scripts/: query_knowledge_base.py  recompute_run_metrics.py  rescore_papers.py  run_extraction_pipeline.py  run_verification_pipeline.py  test_agents.py
scientific-claim-verifier/scripts/analysis/: add_confidence_to_summary.py  analyze_confidence_scores.py  generate_label_only_reports.py
scientific-claim-verifier/scripts/batch_processing/: README.md  create_batch_extraction_jobs.py  create_corpus_batch_jobs.py  list_resources.py  monitor_batch_jobs.py  process_batch_results.py  submit_batch.py
scientific-claim-verifier/scverifier/api/: api.py  api_core.py  api_openalex.py  api_pmc.py  api_pubmed.py  api_semantic_scholar.py
scientific-claim-verifier/scverifier/config/: settings.py
scientific-claim-verifier/scverifier/data/: database.py  file_loader.py  local_paper_processor.py  models.py  simple_pdf_extractors.py
scientific-claim-verifier/scverifier/pipelines/: verification_pipeline.py
scientific-claim-verifier/scverifier/utils/: id_generator.py
scientific-claim-verifier/scverifier/webapp/: main.py  verify_agent_simple.py
scientific-claim-verifier/tests/: test_api_search.py  test_benchmark_runner.py  test_benchmark_system.py  test_claim_verification.py  test_deletion_performance.py  test_gemini_api_langchain.py  test_gemini_api_mixed.py  test_gemini_api_raw.py  test_simple_extraction.py
scientific-claim-verifier/tests/simple_extraction_tests/: pdfplumber_output.md  pymupdf_output.md  pypdf_output.md
scientific-claim-verifier/tests/test_benchmark_output/: summary.json
(+3005 files in other folders)
